@@ -86,7 +86,7 @@ final class UserDefinedMacroFunctionBuilderTest {
 
         final var arguments = ImmutableList.of(LiteralValue.ofScalar("hello"));
         assertThat(macroIdentityFunction.encapsulate(CallSiteArguments.ofPositional(arguments)))
-                .isEqualTo(arguments.getFirst());
+                .isEqualTo(arguments.get(0));
     }
 
     @Test
